# transformers

./: README.md  pyproject.toml
data/: verse_202412132333.json
dev_tools/: bootstrap.sh
notebooks/: lesson_1.ipynb  lesson_3_decoder.ipynb  lesson_3_decoder_offshelf.ipynb
tests/unit_tests/networks/: test_attention_head.py
transformers_tutorial/: utils.py
transformers_tutorial/networks/: attention_head.py  sequence_classifier.py  trainer.py
